# ITjujiryou

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  YUKO_PIPE_PLAN.md  aitei_juujiryou_v2_confirmed_decisions.md  aitei_juujiryou_v2_master_specification.md  envPlan.md  pyproject.toml
.claude/: phase_state.json  settings.json  settings.local.json
.claude/plans/: phase_0_plan_v2.md  phase_A.md  phase_B.md  phase_C.md
.claude/skills/: _core  _marketing
benchmarks/: HANDOFF.md  README.md  rubric.md  souther_hook_inventory.md
benchmarks/runs/: comparison.md  phase1-smoke.md  phase2-smoke.md
data/memory/: README.md
docs/: 2026-05-16_system_rethink_discussion.md  2026-05-17_overhaul_requirements.md  2026-05-17_tenshou_jujika_flow_test_log.md  development_layer_rules.md  genimage_codex_route_reference.md  prompts_overview.md  scripts_index.md  v2_carryover_candidates.md
docs/case_log_analysis/: 2026-05-14_15.md
prompts/: _company_motto.md  designer.md  engineer.md  souther_president.md  souther_quotes.md  writer.md  yuko_secretary.md
scripts/: inbox_watcher.py  souther_quotes_json.py  start_office.sh  stop_office.sh  use_haiku.sh  use_opus.sh
scripts/dev_hooks/: advance_phase_state.py  freeze_phase_state.py  init_phase_state.py  inject_phase.py  update_phase_state.py
scripts/gen-asset/: _common.py  crop_desk.py  gen_image.py  gen_music.py  gen_sfx.py  gen_tts.py  postprocess.py  setup.sh  split_sprites.py
scripts/hooks/: check_persona_leak.py  check_souther_recipient.py  inject_souther_mode.py  souther_dispatcher.py
src/: main.py  mcp_server.py  orchestrator.py  persona.py  reception.py
src/agents/: base.py  designer.py  engineer.py  president.py  secretary.py  writer.py
src/events/: logger.py
src/memory/: schema.sql  store.py
src/ui/: __init__.py  (+2 more)
tests/: test_api_smoke.py  test_dev_hooks_lock.py  test_dispatch.py  test_evaluate.py  test_inbox_watcher_curator.py  test_mcp_dispatch_payload.py  test_memory_access_guards.py  test_memory_approval_finalization.py  test_mesh_safety.py  test_persona_leak.py  test_post_deliver_hook.py  test_preamble_strip.py  test_president_no_tools.py  test_preview.py  test_souther_modes.py  test_souther_quote_picker.py  test_store.py
workflows/: README.md
(+103 files in other folders)
