[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itjujiryou"
version = "0.1.0"
description = "IT十字陵 — 仮想下請け事務所システム (Phase 1 MVP)"
requires-python = ">=3.11"
dependencies = [
    # claude-agent-sdk は常に最新を取りに行く方針（下限のみ指定し、上限は固定しない）
    # 0.1.76+: effort に "xhigh" が追加された
    "claude-agent-sdk>=0.1.76",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
itjujiryou = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
