[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itjujiryou"
version = "0.2.0"
description = "愛帝十字陵 — 仮想下請け事務所 (マルチプロセス Claude Code 構成 / v3.1 全員転生者世界観)"
requires-python = ">=3.11"
dependencies = [
    # マルチプロセス構成: ./scripts/start_office.sh で起動した tmux 内の Claude Code
    # プロセス群が SQLite + stdio MCP server (mcp パッケージ) で連携する。
    "mcp>=1.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
itjujiryou = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
